--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,12 @@ background: #79f78e;
 .Hijau.selected{
   background: #79f78e;
 }
+.Oranye.is.active {
+background: #ff780a;
+}
+.Oranye.selected{
+  background: #ff780a;
+}
 .info {
   margin-top: 40px;
   text-align: center;
