--- a/src/App.css
+++ b/src/App.css
@@ -68,10 +68,10 @@ background: #79f78e;
 .Hijau.selected{
   background: #79f78e;
 }
-.Oranye.is.active {
+.Orange.is.active {
 background: #ff780a;
 }
-.Oranye.selected{
+.Orange.selected{
   background: #ff780a;
 }
 .info {
