--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@ a:hover {
 }
 
 .nav {
-  width: 500px;
   margin: 20px auto;
   max-width: 48em;
   border: 1px solid #333;
@@ -68,12 +67,18 @@ background: #79f78e;
 .Hijau.selected{
   background: #79f78e;
 }
-.Orange.is.active {
+.Orange.is-active {
 background: #ff780a;
 }
 .Orange.selected{
   background: #ff780a;
 }
+.Pink.is-active {
+  background: #ffafb3;
+  }
+  .Pink.selected{
+    background: #ffafb3;
+  }
 .info {
   margin-top: 40px;
   text-align: center;
